Upgrade to new MiniPlugin types